Feature/docker images and deploy (#43)
* first commit

* prueba

* [Ex-01BE]:Dockerization of the backend application, creation of .env to define DDBB parameters addition of logs on the console with LogMode on database file of config folder

* elimination commentaire pas necessaire

* Dockerfiles and docker-compose added - WIP

* Styling + docker

* Deploy fixes - to rework

* Fixing cron generation of surveyCode

* Fixing ResultByUser querry

* fix typo service

* Manage Team admin page

* Added NewSurvey button and service

* Validate NextSurveyCode generation + user replace in repo for notes

* Fix newSurveyCode full workflow

* Edit Teams from web wip

* Clean-up

* Added getNewSurveyCode + Team administartion pages
